[metadata]
name =asr1k-neutron-l3
summary = Cisco ASR1K driver OpenStack Neutron
description-file =
    README.md
author = SAP SE
author-email =
home-page = https://github.com/sapcc/asr1k-neutron-l3
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    asr1k_neutron_l3
data_files =
    etc/neutron =
        etc/neutron/plugins/ml2/ml2_conf_asr1k.ini


[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

console_scripts =
    asr1k-l3-agent =  asr1k_neutron_l3.plugins.l3.agents.asr1k_l3_agent:main
    asr1k-ml2-agent = asr1k_neutron_l3.plugins.ml2.agents.start_agent:main
    asr1k-cli = asr1k_neutron_l3.cli.asr1k_cli:main

neutron.service_plugins =
    asr1k_l3_routing = asr1k_neutron_l3.plugins.l3.service_plugins.asr1k_router_plugin:ASR1KRouterPlugin

neutron.ml2.mechanism_drivers =
    asr1k_ml2 = asr1k_neutron_l3.plugins.ml2.drivers.mech_asr1k.driver:ASR1KMechanismDriver

neutron.db.alembic_migrations =
    asr1k-neutron-l3 = asr1k_neutron_l3.db.migration:alembic_migrations

openstack.cli.extension =
    asr1k = asr1k_neutron_l3.client_plugins.client

openstack.asr1k.v2 =
     asr1k_devices_update = asr1k_neutron_l3.client_plugins.v2.devices:UpdateDevices

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = asr1k_neutron_l3/locale/asr1k_neutron_l3.pot

[compile_catalog]
directory = asr1k_neutron_l3/locale
domain = asr1k_neutron_l3

[update_catalog]
domain = asr1k_neutron_l3
output_dir = asr1k_neutron_l3/locale
input_file = asr1k_neutron_l3/locale/asr1k_neutron_l3.pot

[wheel]
universal = 1
